# argo-testing

./: Dockerfile  README.md  applicationset.yml  job.yaml  k3d.yaml  pyproject.toml  update_version.sh
argo_testing/: __main__.py
deploy/: argo_values.yml
deploy/envs/: dev.yaml  in-cluster.yaml
deploy/helm/: Chart.yaml  values.yaml
deploy/helm/argo_testing/: Chart.yaml  values.yaml
deploy/helm/argo_testing/templates/: _helpers.tpl  deployment.yaml  job.yaml
deploy/helm/argocd/: Chart.yaml  values.yaml
deploy/helm/templates/: NOTES.txt  deployment.yaml  job.yaml  serviceaccount.yaml
