[tool.poetry]
name = "argo-testing"
version = "1.0.11"
description = ""
authors = ["Pavel Kirilin <win10@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.6"
typer = {version = "^0.9.0", extras = ["all"]}


[tool.poetry.group.dev.dependencies]
black = "^23.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
